# dpm

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  config.py  go.work  go.work.sum  hello.py  pyproject.toml  requirements.txt  secrets.template.toml  settings.toml  setup.bat
.github/workflows/: python-app.yml
dpm/: app.py  databases.py  env.py
dpm/models/: Account.py  Playlist.py
dpm/models/pydantic/: user.py
dpm/repository/: AccountRepository.py
dpm/routes/: AccountRoutes.py
dpm/services/: AccountService.py
dpm/static/: style.css
dpm/templates/: account.html  index.html  login.html
src/dpm/: __init__.py  app.py  auth.py  databases.py  logger.py  logger_.py
src/dpm/models/: customtypes.py  settings.py  user.py
templates/: changelog_template.j2
test/: __init__.py  logger_.py  test_logger.py
test/testdpm/: test_iso.py  test_models.py
